Fix : Panel scrollbar for Firefox

--- a/src/Resources/scss/scrollbar.scss
+++ b/src/Resources/scss/scrollbar.scss
@@ -13,7 +13,7 @@
  *
  * @author  C.R <cr@junjulini.com>
  * @package zimbrucode
- * @since   1.1.0
+ * @since   1.3.0
  */
 
 // Import ZC : Global vars
@@ -27,8 +27,11 @@
     right: 0;
     bottom: 0;
     left: 0;
-    scrollbar-width: thin;
-    scrollbar-color: $bg-color__scroll-bar__hover transparent;
+
+    @-moz-document url-prefix() {
+        scrollbar-width: thin;
+        scrollbar-color: $bg-color__scroll-bar__hover transparent;
+    }
 
     &::-webkit-scrollbar {
         width: 13px;
